// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radio should render a checkbox 1`] = `
Array [
  .c1 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c0 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c2 .modal-button-container {
  margin-top: 1em;
}

.c3 {
  font-weight: bold;
}

.c4 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c4:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c4:focus,
.c4:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c4::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c4::-moz-placeholder {
  color: #a3a3a3;
}

.c4:-ms-input-placeholder {
  color: #a3a3a3;
}

.c4::placeholder {
  color: #a3a3a3;
}

.c4:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c4[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

<div
    class="c0"
  >
    <label
      class="c1"
      for="answer-label-ansID1"
    >
      Label (optional)
    </label>
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      <textarea
        aria-invalid="false"
        class="c4"
        data-autofocus="true"
        data-test="txt-answer-label"
        id="answer-label-ansID1"
        name="label"
        placeholder=""
      />
    </div>
  </div>,
  .c2 {
  display: inline-block;
  margin-bottom: 0;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c6 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  display: inline-block;
  width: 1.1em;
  height: 1.1em;
  padding: 0;
  margin: 0 1em 0 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1em;
}

.c6:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c6:focus,
.c6:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c6::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c6::-moz-placeholder {
  color: #a3a3a3;
}

.c6:-ms-input-placeholder {
  color: #a3a3a3;
}

.c6::placeholder {
  color: #a3a3a3;
}

.c6:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c6[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c6:checked {
  background: url(SvgrURL) no-repeat center;
  background-size: 0.8em auto;
}

.c0 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c9 {
  height: 1em;
  width: 1.5em;
  top: 0.6000000000000001em;
  background: #FFFFFF;
  border-radius: 2em;
  position: absolute;
  border: 1px solid #666666;
  -webkit-transition: background 100ms ease-out,border-color 100ms ease-in;
  transition: background 100ms ease-out,border-color 100ms ease-in;
  outline: 1px solid transparent;
  cursor: pointer;
}

.c9:hover {
  border-color: #3B7A9E;
}

.c10 {
  display: inline-block;
  height: 1em;
  width: 1em;
  background: #FFFFFF;
  top: calc(42% - 1em / 2);
  left: calc(32% - 1em / 2);
  position: relative;
  will-change: transform;
  -webkit-transform: translateX( 0em );
  -ms-transform: translateX( 0em );
  transform: translateX( 0em );
  border-radius: 50%;
  -webkit-transition: -webkit-transform 100ms ease-in-out;
  -webkit-transition: transform 100ms ease-in-out;
  transition: transform 100ms ease-in-out;
  border: inherit;
}

.c7 {
  opacity: 0;
  position: relative;
  height: 100%;
  width: 100%;
  margin: 0;
  cursor: pointer;
}

.c7:focus + .c8 {
  box-shadow: 0 0 0 2px #FDBD56;
}

.c7:hover + .c8 {
  border-color: #3B7A9E;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.2em;
  width: 2em;
  position: relative;
}

.c4 {
  padding: 0 1em;
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #222222;
  font-weight: 600;
}

.c4:first-of-type {
  padding-right: 0.5em;
}

.c4:last-of-type {
  padding-left: 0.5em;
}

.c11 {
  padding: 0 1em;
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #999999;
  font-weight: 600;
}

.c11:first-of-type {
  padding-right: 0.5em;
}

.c11:last-of-type {
  padding-left: 0.5em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin-right: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="c0 c1"
  >
    <label
      class="c2 c3"
      for="ansID1"
    >
      Answer required
    </label>
    <div
      checked=""
      class="c4"
    >
      Off
    </div>
    <div
      aria-checked="false"
      class="c5"
      data-test="ansID1"
      role="switch"
    >
      <input
        aria-checked="false"
        aria-label="Answer required"
        class="c6 c7"
        data-test="ansID1-input"
        id="ansID1"
        name="ansID1"
        role="checkbox"
        type="checkbox"
      />
      <div
        class="c8 c9"
        role="presentation"
      >
        <div
          class="c10"
        />
      </div>
    </div>
    <div
      class="c11"
    >
      On
    </div>
  </div>,
  .c10 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c18 {
  display: inline-block;
  margin-bottom: 0;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c22 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  display: inline-block;
  width: 1.1em;
  height: 1.1em;
  padding: 0;
  margin: 0 1em 0 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1em;
}

.c22:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c22:focus,
.c22:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c22::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c22::-moz-placeholder {
  color: #a3a3a3;
}

.c22:-ms-input-placeholder {
  color: #a3a3a3;
}

.c22::placeholder {
  color: #a3a3a3;
}

.c22:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c22[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c22:checked {
  background: url(SvgrURL) no-repeat center;
  background-size: 0.8em auto;
}

.c8 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c15 {
  display: block;
  margin-bottom: 1em;
  position: relative;
  opacity: 0.6;
}

.c40 {
  position: absolute;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 0;
  line-height: 1.3;
  color: var(--color-text);
  width: 100%;
  min-width: 0;
}

.c39 svg {
  pointer-events: none;
  -webkit-flex: 0 0 2em;
  -ms-flex: 0 0 2em;
  flex: 0 0 2em;
}

.c39 svg path {
  fill: var(--color-text);
}

.c11 .modal-button-container {
  margin-top: 1em;
}

.c12 {
  font-weight: bold;
}

.c14 {
  font-weight: regular;
}

.c13 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c13:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c13:focus,
.c13:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c13::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c13::-moz-placeholder {
  color: #a3a3a3;
}

.c13:-ms-input-placeholder {
  color: #a3a3a3;
}

.c13::placeholder {
  color: #a3a3a3;
}

.c13:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c13[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c7 {
  background: #E4E8EB;
  background-size: cover;
  height: 1.4em;
  width: 1.4em;
  display: inline-block;
  margin: 2em 1em 0 0;
  border-radius: 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c25 {
  height: 1em;
  width: 1.5em;
  top: 0.6000000000000001em;
  background: #FFFFFF;
  border-radius: 2em;
  position: absolute;
  border: 1px solid #666666;
  -webkit-transition: background 100ms ease-out,border-color 100ms ease-in;
  transition: background 100ms ease-out,border-color 100ms ease-in;
  outline: 1px solid transparent;
  cursor: pointer;
}

.c25:hover {
  border-color: #3B7A9E;
}

.c26 {
  display: inline-block;
  height: 1em;
  width: 1em;
  background: #FFFFFF;
  top: calc(42% - 1em / 2);
  left: calc(32% - 1em / 2);
  position: relative;
  will-change: transform;
  -webkit-transform: translateX( 0em );
  -ms-transform: translateX( 0em );
  transform: translateX( 0em );
  border-radius: 50%;
  -webkit-transition: -webkit-transform 100ms ease-in-out;
  -webkit-transition: transform 100ms ease-in-out;
  transition: transform 100ms ease-in-out;
  border: inherit;
}

.c23 {
  opacity: 0;
  position: relative;
  height: 100%;
  width: 100%;
  margin: 0;
  cursor: pointer;
}

.c23:focus + .c24 {
  box-shadow: 0 0 0 2px #FDBD56;
}

.c23:hover + .c24 {
  border-color: #3B7A9E;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.2em;
  width: 2em;
  position: relative;
}

.c20 {
  padding: 0 1em;
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #222222;
  font-weight: 600;
}

.c20:first-of-type {
  padding-right: 0.5em;
}

.c20:last-of-type {
  padding-left: 0.5em;
}

.c27 {
  padding: 0 1em;
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #999999;
  font-weight: 600;
}

.c27:first-of-type {
  padding-right: 0.5em;
}

.c27:last-of-type {
  padding-left: 0.5em;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  margin-right: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  margin: 0;
}

.c29 {
  margin: 0;
}

.c30 {
  vertical-align: middle;
  text-align: left;
  margin: 0;
  padding: 0.25em 0 0.5em;
  font-size: inherit;
}

.c30 .c42 {
  margin-left: 1em;
}

.c32 {
  display: none;
  margin-top: -1em;
  border-left: 3px solid #d6d8da;
  padding: 1em;
}

.c32 p {
  margin-top: 0;
}

.c31 {
  border: none;
  font-size: 1em;
  font-weight: bold;
  margin: 0;
  padding: 0.25em 0.25em 0.25em 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background: transparent;
  cursor: pointer;
  color: #3B7A9E;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 0;
}

.c31:focus {
  outline: 2px solid #FDBD56;
}

.c31::before {
  content: "";
  background-color: #3B7A9E;
  -webkit-mask: url(SvgrURL);
  mask: url(SvgrURL);
  width: 1.5em;
  height: 1.5em;
  margin-top: 0.2em;
  margin-left: -0.5em;
}

.c31:hover {
  color: #003c57;
}

.c31:hover::before {
  background-color: #003c57;
}

.c33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  position: relative;
  border: none;
  padding: 0.4em 0.8em;
  color: black;
  background-color: #d6d8da;
  font-weight: normal;
}

.c33[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c33:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c33:hover {
  --color-text: #FFFFFF;
  --color-bg: #2d5d79;
  border-color: var(--color-bg);
}

.c33:hover {
  background-color: #999999;
}

.c33:focus {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c5 {
  position: absolute;
  left: 10px;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 1.5em;
}

.c9 {
  margin-bottom: 1.5em;
}

.c4 {
  border: 1px solid #d6d8da;
  padding: 1em 1em 0;
  border-radius: 4px;
  position: relative;
  margin-bottom: 1em;
}

.c17 {
  margin-bottom: 0.6em;
  pointer-events: none;
}

.c3 {
  position: relative;
}

.c3.option-enter {
  opacity: 0;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  z-index: 200;
}

.c3.option-enter-active {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: opacity 200ms ease-out,-webkit-transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  -webkit-transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
}

.c3.option-exit {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c3.option-exit-active {
  opacity: 0;
  height: 0 !important;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,-webkit-transform 100ms ease-in;
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
  transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
}

.c36 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #3B7A9E;
  --color-bg: #FFFFFF;
  border: 1px solid var(--color-text);
  border-radius: 4px 0 0 4px;
  border-right: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  z-index: 2;
}

.c36[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c36:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c36:hover {
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  border-color: var(--color-bg);
}

.c38 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #3B7A9E;
  --color-bg: #FFFFFF;
  border: 1px solid var(--color-text);
  border-radius: 0 4px 4px 0;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  padding: 0.3em;
  position: relative;
}

.c38[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c38:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c38:hover {
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  border-color: var(--color-bg);
}

.c38:focus {
  z-index: 3;
}

.c37 {
  position: relative;
  display: inline-block;
}

.c41 {
  position: absolute;
  right: 0;
  top: 100%;
  z-index: 10;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.c0 {
  margin: 1em 0 0;
  width: 85%;
}

.c1 {
  margin: 0 0 1em;
}

.c35 {
  margin-bottom: 1em;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-test="multiple-choice-options"
    >
      <div>
        <div
          class="c2 c3"
        >
          <div
            class="c4"
          >
            <div>
              <div
                class="c5"
              />
              <div
                class="c6"
              >
                <div
                  class="c7"
                  data-test="dummy-multiple-choice"
                  type="Checkbox"
                />
                <div
                  class="c8 c9"
                >
                  <label
                    class="c10"
                    for="option-label-1"
                  >
                    Label
                  </label>
                  <div
                    class="c11"
                  />
                  <div
                    class="c12"
                  >
                    <textarea
                      aria-invalid="false"
                      class="c13"
                      data-autofocus="true"
                      data-test="option-label"
                      id="option-label-1"
                      invalid=""
                      name="label"
                      placeholder=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="c8 c9"
              >
                <label
                  class="c10"
                  for="option-description-1"
                >
                  Description (optional)
                </label>
                <div
                  class="c11"
                />
                <div
                  class="c14"
                >
                  <textarea
                    aria-invalid="false"
                    class="c13"
                    data-test="option-description"
                    id="option-description-1"
                    name="description"
                  />
                </div>
              </div>
              <div
                class="c6"
              >
                <div
                  class="c15 c16 c17"
                  disabled=""
                  name="Dynamic Option"
                >
                  <label
                    class="c18 c19"
                    for="dynamic-option-toggle-switch-1"
                  >
                    Dynamic Option
                  </label>
                  <div
                    checked=""
                    class="c20"
                  >
                    Off
                  </div>
                  <div
                    aria-checked="false"
                    class="c21"
                    data-test="dynamic-option-toggle-switch-1"
                    role="switch"
                  >
                    <input
                      aria-checked="false"
                      aria-label="Dynamic Option"
                      class="c22 c23"
                      data-test="dynamic-option-toggle-switch-1-input"
                      id="dynamic-option-toggle-switch-1"
                      name="dynamic-option-toggle-switch-1"
                      role="checkbox"
                      type="checkbox"
                    />
                    <div
                      class="c24 c25"
                      role="presentation"
                    >
                      <div
                        class="c26"
                      />
                    </div>
                  </div>
                  <div
                    class="c27"
                  >
                    On
                  </div>
                </div>
              </div>
              <div
                class="c8 c9"
              >
                <div
                  class="c28"
                  data-test="collapsible"
                >
                  <div
                    class="c29 collapsible-header"
                    data-test="collapsible-header"
                  >
                    <h2
                      class="c30 collapsible-title"
                      data-test="collapsible-title"
                    >
                      <button
                        aria-controls="collapsible-body"
                        class="c31 collapsible-toggle-Collapsible-Button"
                        data-test="collapsible-toggle-button"
                      >
                        What is a dynamic option?
                      </button>
                    </h2>
                  </div>
                  <div
                    aria-hidden="true"
                    class="c32 collapsible-body"
                    data-test="collapsible-body"
                  >
                    <p
                      class=""
                    >
                      Answer options can be set to be dynamic to use answers from a previous checkbox question. Note, if only one checkbox answer exists then the answer question is skipped.
                    </p>
                    <p
                      class=""
                    >
                      Question titles can include piped dynamic option answers.
                    </p>
                    <button
                      class="c33"
                      data-test="collapsible-hide-button"
                      type="button"
                    >
                      Hide this
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c34 c35"
      >
        <button
          class="c36"
          data-test="btn-add-option"
          type="button"
        >
          Add checkbox
        </button>
        <div
          class="c37"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="c38"
            data-test="btn-add-option-menu"
            type="button"
          >
            <span
              class="c39"
            >
              <svg />
              <span
                class="c40"
              >
                Show additional options
              </span>
            </span>
          </button>
          <div
            class="c41"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`radio should render a mutually exclusive 1`] = `
.c10 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c8 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c11 .modal-button-container {
  margin-top: 1em;
}

.c12 {
  font-weight: bold;
}

.c14 {
  font-weight: regular;
}

.c13 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c13:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c13:focus,
.c13:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c13::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c13::-moz-placeholder {
  color: #a3a3a3;
}

.c13:-ms-input-placeholder {
  color: #a3a3a3;
}

.c13::placeholder {
  color: #a3a3a3;
}

.c13:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c13[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c7 {
  background: #E4E8EB;
  background-size: cover;
  height: 1.4em;
  width: 1.4em;
  display: inline-block;
  margin: 2em 1em 0 0;
  border-radius: 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c15 {
  margin: 0;
}

.c16 {
  margin: 0;
}

.c17 {
  vertical-align: middle;
  text-align: left;
  margin: 0;
  padding: 0.25em 0 0.5em;
  font-size: inherit;
}

.c17 .c22 {
  margin-left: 1em;
}

.c19 {
  display: none;
  margin-top: -1em;
  border-left: 3px solid #d6d8da;
  padding: 1em;
}

.c19 p {
  margin-top: 0;
}

.c18 {
  border: none;
  font-size: 1em;
  font-weight: bold;
  margin: 0;
  padding: 0.25em 0.25em 0.25em 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background: transparent;
  cursor: pointer;
  color: #3B7A9E;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 0;
}

.c18:focus {
  outline: 2px solid #FDBD56;
}

.c18::before {
  content: "";
  background-color: #3B7A9E;
  -webkit-mask: url(SvgrURL);
  mask: url(SvgrURL);
  width: 1.5em;
  height: 1.5em;
  margin-top: 0.2em;
  margin-left: -0.5em;
}

.c18:hover {
  color: #003c57;
}

.c18:hover::before {
  background-color: #003c57;
}

.c20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  position: relative;
  border: none;
  padding: 0.4em 0.8em;
  color: black;
  background-color: #d6d8da;
  font-weight: normal;
}

.c20[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c20:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c20:hover {
  --color-text: #FFFFFF;
  --color-bg: #2d5d79;
  border-color: var(--color-bg);
}

.c20:hover {
  background-color: #999999;
}

.c20:focus {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c5 {
  position: absolute;
  left: 10px;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 1.5em;
}

.c9 {
  margin-bottom: 1.5em;
}

.c4 {
  border: 1px solid #d6d8da;
  padding: 1em 1em 0;
  border-radius: 4px;
  position: relative;
  margin-bottom: 1em;
}

.c3 {
  position: relative;
}

.c3.option-enter {
  opacity: 0;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  z-index: 200;
}

.c3.option-enter-active {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: opacity 200ms ease-out,-webkit-transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  -webkit-transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
}

.c3.option-exit {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c3.option-exit-active {
  opacity: 0;
  height: 0 !important;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,-webkit-transform 100ms ease-in;
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
  transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
}

.c2 {
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.c0 {
  margin: 1em 0 0;
  width: 85%;
}

.c1 {
  margin: 0 0 1em;
}

.c21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #3B7A9E;
  --color-bg: #FFFFFF;
  border: 1px solid var(--color-text);
  width: 100%;
  margin-top: 1em;
  margin-bottom: 1em;
}

.c21[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c21:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c21:hover {
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  border-color: var(--color-bg);
}

<div
  class="c0"
>
  <div
    class="c1"
    data-test="multiple-choice-options"
  >
    <div>
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div>
            <div
              class="c5"
            />
            <div
              class="c6"
            >
              <div
                class="c7"
                data-test="dummy-multiple-choice"
                type="MutuallyExclusive"
              />
              <div
                class="c8 c9"
              >
                <label
                  class="c10"
                  for="option-label-1"
                >
                  Label
                </label>
                <div
                  class="c11"
                />
                <div
                  class="c12"
                >
                  <textarea
                    aria-invalid="false"
                    class="c13"
                    data-autofocus="true"
                    data-test="option-label"
                    id="option-label-1"
                    invalid=""
                    name="label"
                    placeholder=""
                  />
                </div>
              </div>
            </div>
            <div
              class="c8 c9"
            >
              <label
                class="c10"
                for="option-description-1"
              >
                Description (optional)
              </label>
              <div
                class="c11"
              />
              <div
                class="c14"
              >
                <textarea
                  aria-invalid="false"
                  class="c13"
                  data-test="option-description"
                  id="option-description-1"
                  name="description"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c15"
    data-test="collapsible"
  >
    <div
      class="c16 collapsible-header"
      data-test="collapsible-header"
    >
      <h2
        class="c17 collapsible-title"
        data-test="collapsible-title"
      >
        <button
          aria-controls="collapsible-body"
          class="c18 collapsible-toggle-Collapsible-Button"
          data-test="collapsible-toggle-button"
        >
          What is an OR answer?
        </button>
      </h2>
    </div>
    <div
      aria-hidden="true"
      class="c19 collapsible-body"
      data-test="collapsible-body"
    >
      <p
        class=""
      >
        The OR answer type is a mutually exclusive answer. When selected, any preceding answers given on the page will be cleared. It will appear as a checkbox answer to the respondent unless there is more than one OR option, in which case it will display as a Radio answer.
      </p>
      <button
        class="c20"
        data-test="collapsible-hide-button"
        type="button"
      >
        Hide this
      </button>
    </div>
  </div>
  <div>
    <button
      class="c21"
      type="button"
    >
      Add another option
    </button>
  </div>
</div>
`;

exports[`radio should render a radio 1`] = `
Array [
  .c1 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c0 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c2 .modal-button-container {
  margin-top: 1em;
}

.c3 {
  font-weight: bold;
}

.c4 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c4:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c4:focus,
.c4:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c4::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c4::-moz-placeholder {
  color: #a3a3a3;
}

.c4:-ms-input-placeholder {
  color: #a3a3a3;
}

.c4::placeholder {
  color: #a3a3a3;
}

.c4:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c4[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

<div
    class="c0"
  >
    <label
      class="c1"
      for="answer-label-ansID1"
    >
      Label (optional)
    </label>
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      <textarea
        aria-invalid="false"
        class="c4"
        data-autofocus="true"
        data-test="txt-answer-label"
        id="answer-label-ansID1"
        name="label"
        placeholder=""
      />
    </div>
  </div>,
  .c2 {
  display: inline-block;
  margin-bottom: 0;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c6 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  display: inline-block;
  width: 1.1em;
  height: 1.1em;
  padding: 0;
  margin: 0 1em 0 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1em;
}

.c6:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c6:focus,
.c6:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c6::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c6::-moz-placeholder {
  color: #a3a3a3;
}

.c6:-ms-input-placeholder {
  color: #a3a3a3;
}

.c6::placeholder {
  color: #a3a3a3;
}

.c6:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c6[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c6:checked {
  background: url(SvgrURL) no-repeat center;
  background-size: 0.8em auto;
}

.c0 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c9 {
  height: 1em;
  width: 1.5em;
  top: 0.6000000000000001em;
  background: #FFFFFF;
  border-radius: 2em;
  position: absolute;
  border: 1px solid #666666;
  -webkit-transition: background 100ms ease-out,border-color 100ms ease-in;
  transition: background 100ms ease-out,border-color 100ms ease-in;
  outline: 1px solid transparent;
  cursor: pointer;
}

.c9:hover {
  border-color: #3B7A9E;
}

.c10 {
  display: inline-block;
  height: 1em;
  width: 1em;
  background: #FFFFFF;
  top: calc(42% - 1em / 2);
  left: calc(32% - 1em / 2);
  position: relative;
  will-change: transform;
  -webkit-transform: translateX( 0em );
  -ms-transform: translateX( 0em );
  transform: translateX( 0em );
  border-radius: 50%;
  -webkit-transition: -webkit-transform 100ms ease-in-out;
  -webkit-transition: transform 100ms ease-in-out;
  transition: transform 100ms ease-in-out;
  border: inherit;
}

.c7 {
  opacity: 0;
  position: relative;
  height: 100%;
  width: 100%;
  margin: 0;
  cursor: pointer;
}

.c7:focus + .c8 {
  box-shadow: 0 0 0 2px #FDBD56;
}

.c7:hover + .c8 {
  border-color: #3B7A9E;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.2em;
  width: 2em;
  position: relative;
}

.c4 {
  padding: 0 1em;
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #222222;
  font-weight: 600;
}

.c4:first-of-type {
  padding-right: 0.5em;
}

.c4:last-of-type {
  padding-left: 0.5em;
}

.c11 {
  padding: 0 1em;
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #999999;
  font-weight: 600;
}

.c11:first-of-type {
  padding-right: 0.5em;
}

.c11:last-of-type {
  padding-left: 0.5em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin-right: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="c0 c1"
  >
    <label
      class="c2 c3"
      for="ansID1"
    >
      Answer required
    </label>
    <div
      checked=""
      class="c4"
    >
      Off
    </div>
    <div
      aria-checked="false"
      class="c5"
      data-test="ansID1"
      role="switch"
    >
      <input
        aria-checked="false"
        aria-label="Answer required"
        class="c6 c7"
        data-test="ansID1-input"
        id="ansID1"
        name="ansID1"
        role="checkbox"
        type="checkbox"
      />
      <div
        class="c8 c9"
        role="presentation"
      >
        <div
          class="c10"
        />
      </div>
    </div>
    <div
      class="c11"
    >
      On
    </div>
  </div>,
  .c10 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c18 {
  display: inline-block;
  margin-bottom: 0;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c22 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  display: inline-block;
  width: 1.1em;
  height: 1.1em;
  padding: 0;
  margin: 0 1em 0 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1em;
}

.c22:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c22:focus,
.c22:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c22::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c22::-moz-placeholder {
  color: #a3a3a3;
}

.c22:-ms-input-placeholder {
  color: #a3a3a3;
}

.c22::placeholder {
  color: #a3a3a3;
}

.c22:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c22[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c22:checked {
  background: url(SvgrURL) no-repeat center;
  background-size: 0.8em auto;
}

.c8 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c15 {
  display: block;
  margin-bottom: 1em;
  position: relative;
  opacity: 0.6;
}

.c40 {
  position: absolute;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 0;
  line-height: 1.3;
  color: var(--color-text);
  width: 100%;
  min-width: 0;
}

.c39 svg {
  pointer-events: none;
  -webkit-flex: 0 0 2em;
  -ms-flex: 0 0 2em;
  flex: 0 0 2em;
}

.c39 svg path {
  fill: var(--color-text);
}

.c11 .modal-button-container {
  margin-top: 1em;
}

.c12 {
  font-weight: bold;
}

.c14 {
  font-weight: regular;
}

.c13 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c13:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c13:focus,
.c13:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c13::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c13::-moz-placeholder {
  color: #a3a3a3;
}

.c13:-ms-input-placeholder {
  color: #a3a3a3;
}

.c13::placeholder {
  color: #a3a3a3;
}

.c13:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c13[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c7 {
  background: #E4E8EB;
  background-size: cover;
  height: 1.4em;
  width: 1.4em;
  display: inline-block;
  margin: 2em 1em 0 0;
  border-radius: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c25 {
  height: 1em;
  width: 1.5em;
  top: 0.6000000000000001em;
  background: #FFFFFF;
  border-radius: 2em;
  position: absolute;
  border: 1px solid #666666;
  -webkit-transition: background 100ms ease-out,border-color 100ms ease-in;
  transition: background 100ms ease-out,border-color 100ms ease-in;
  outline: 1px solid transparent;
  cursor: pointer;
}

.c25:hover {
  border-color: #3B7A9E;
}

.c26 {
  display: inline-block;
  height: 1em;
  width: 1em;
  background: #FFFFFF;
  top: calc(42% - 1em / 2);
  left: calc(32% - 1em / 2);
  position: relative;
  will-change: transform;
  -webkit-transform: translateX( 0em );
  -ms-transform: translateX( 0em );
  transform: translateX( 0em );
  border-radius: 50%;
  -webkit-transition: -webkit-transform 100ms ease-in-out;
  -webkit-transition: transform 100ms ease-in-out;
  transition: transform 100ms ease-in-out;
  border: inherit;
}

.c23 {
  opacity: 0;
  position: relative;
  height: 100%;
  width: 100%;
  margin: 0;
  cursor: pointer;
}

.c23:focus + .c24 {
  box-shadow: 0 0 0 2px #FDBD56;
}

.c23:hover + .c24 {
  border-color: #3B7A9E;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.2em;
  width: 2em;
  position: relative;
}

.c20 {
  padding: 0 1em;
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #222222;
  font-weight: 600;
}

.c20:first-of-type {
  padding-right: 0.5em;
}

.c20:last-of-type {
  padding-left: 0.5em;
}

.c27 {
  padding: 0 1em;
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #999999;
  font-weight: 600;
}

.c27:first-of-type {
  padding-right: 0.5em;
}

.c27:last-of-type {
  padding-left: 0.5em;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  margin-right: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  margin: 0;
}

.c29 {
  margin: 0;
}

.c30 {
  vertical-align: middle;
  text-align: left;
  margin: 0;
  padding: 0.25em 0 0.5em;
  font-size: inherit;
}

.c30 .c42 {
  margin-left: 1em;
}

.c32 {
  display: none;
  margin-top: -1em;
  border-left: 3px solid #d6d8da;
  padding: 1em;
}

.c32 p {
  margin-top: 0;
}

.c31 {
  border: none;
  font-size: 1em;
  font-weight: bold;
  margin: 0;
  padding: 0.25em 0.25em 0.25em 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background: transparent;
  cursor: pointer;
  color: #3B7A9E;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 0;
}

.c31:focus {
  outline: 2px solid #FDBD56;
}

.c31::before {
  content: "";
  background-color: #3B7A9E;
  -webkit-mask: url(SvgrURL);
  mask: url(SvgrURL);
  width: 1.5em;
  height: 1.5em;
  margin-top: 0.2em;
  margin-left: -0.5em;
}

.c31:hover {
  color: #003c57;
}

.c31:hover::before {
  background-color: #003c57;
}

.c33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  position: relative;
  border: none;
  padding: 0.4em 0.8em;
  color: black;
  background-color: #d6d8da;
  font-weight: normal;
}

.c33[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c33:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c33:hover {
  --color-text: #FFFFFF;
  --color-bg: #2d5d79;
  border-color: var(--color-bg);
}

.c33:hover {
  background-color: #999999;
}

.c33:focus {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c5 {
  position: absolute;
  left: 10px;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 1.5em;
}

.c9 {
  margin-bottom: 1.5em;
}

.c4 {
  border: 1px solid #d6d8da;
  padding: 1em 1em 0;
  border-radius: 4px;
  position: relative;
  margin-bottom: 1em;
}

.c17 {
  margin-bottom: 0.6em;
  pointer-events: none;
}

.c3 {
  position: relative;
}

.c3.option-enter {
  opacity: 0;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  z-index: 200;
}

.c3.option-enter-active {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: opacity 200ms ease-out,-webkit-transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  -webkit-transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
}

.c3.option-exit {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c3.option-exit-active {
  opacity: 0;
  height: 0 !important;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,-webkit-transform 100ms ease-in;
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
  transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
}

.c36 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #3B7A9E;
  --color-bg: #FFFFFF;
  border: 1px solid var(--color-text);
  border-radius: 4px 0 0 4px;
  border-right: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  z-index: 2;
}

.c36[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c36:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c36:hover {
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  border-color: var(--color-bg);
}

.c38 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #3B7A9E;
  --color-bg: #FFFFFF;
  border: 1px solid var(--color-text);
  border-radius: 0 4px 4px 0;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  padding: 0.3em;
  position: relative;
}

.c38[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c38:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c38:hover {
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  border-color: var(--color-bg);
}

.c38:focus {
  z-index: 3;
}

.c37 {
  position: relative;
  display: inline-block;
}

.c41 {
  position: absolute;
  right: 0;
  top: 100%;
  z-index: 10;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.c0 {
  margin: 1em 0 0;
  width: 85%;
}

.c1 {
  margin: 0 0 1em;
}

.c35 {
  margin-bottom: 1em;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-test="multiple-choice-options"
    >
      <div>
        <div
          class="c2 c3"
        >
          <div
            class="c4"
          >
            <div>
              <div
                class="c5"
              />
              <div
                class="c6"
              >
                <div
                  class="c7"
                  data-test="dummy-multiple-choice"
                  type="Radio"
                />
                <div
                  class="c8 c9"
                >
                  <label
                    class="c10"
                    for="option-label-1"
                  >
                    Label
                  </label>
                  <div
                    class="c11"
                  />
                  <div
                    class="c12"
                  >
                    <textarea
                      aria-invalid="false"
                      class="c13"
                      data-autofocus="true"
                      data-test="option-label"
                      id="option-label-1"
                      invalid=""
                      name="label"
                      placeholder=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="c8 c9"
              >
                <label
                  class="c10"
                  for="option-description-1"
                >
                  Description (optional)
                </label>
                <div
                  class="c11"
                />
                <div
                  class="c14"
                >
                  <textarea
                    aria-invalid="false"
                    class="c13"
                    data-test="option-description"
                    id="option-description-1"
                    name="description"
                  />
                </div>
              </div>
              <div
                class="c6"
              >
                <div
                  class="c15 c16 c17"
                  disabled=""
                  name="Dynamic Option"
                >
                  <label
                    class="c18 c19"
                    for="dynamic-option-toggle-switch-1"
                  >
                    Dynamic Option
                  </label>
                  <div
                    checked=""
                    class="c20"
                  >
                    Off
                  </div>
                  <div
                    aria-checked="false"
                    class="c21"
                    data-test="dynamic-option-toggle-switch-1"
                    role="switch"
                  >
                    <input
                      aria-checked="false"
                      aria-label="Dynamic Option"
                      class="c22 c23"
                      data-test="dynamic-option-toggle-switch-1-input"
                      id="dynamic-option-toggle-switch-1"
                      name="dynamic-option-toggle-switch-1"
                      role="checkbox"
                      type="checkbox"
                    />
                    <div
                      class="c24 c25"
                      role="presentation"
                    >
                      <div
                        class="c26"
                      />
                    </div>
                  </div>
                  <div
                    class="c27"
                  >
                    On
                  </div>
                </div>
              </div>
              <div
                class="c8 c9"
              >
                <div
                  class="c28"
                  data-test="collapsible"
                >
                  <div
                    class="c29 collapsible-header"
                    data-test="collapsible-header"
                  >
                    <h2
                      class="c30 collapsible-title"
                      data-test="collapsible-title"
                    >
                      <button
                        aria-controls="collapsible-body"
                        class="c31 collapsible-toggle-Collapsible-Button"
                        data-test="collapsible-toggle-button"
                      >
                        What is a dynamic option?
                      </button>
                    </h2>
                  </div>
                  <div
                    aria-hidden="true"
                    class="c32 collapsible-body"
                    data-test="collapsible-body"
                  >
                    <p
                      class=""
                    >
                      Answer options can be set to be dynamic to use answers from a previous checkbox question. Note, if only one checkbox answer exists then the answer question is skipped.
                    </p>
                    <p
                      class=""
                    >
                      Question titles can include piped dynamic option answers.
                    </p>
                    <button
                      class="c33"
                      data-test="collapsible-hide-button"
                      type="button"
                    >
                      Hide this
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c34 c35"
      >
        <button
          class="c36"
          data-test="btn-add-option"
          type="button"
        >
          Add another option
        </button>
        <div
          class="c37"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="c38"
            data-test="btn-add-option-menu"
            type="button"
          >
            <span
              class="c39"
            >
              <svg />
              <span
                class="c40"
              >
                Show additional options
              </span>
            </span>
          </button>
          <div
            class="c41"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`radio should render a select 1`] = `
Array [
  .c1 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c0 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c2 .modal-button-container {
  margin-top: 1em;
}

.c3 {
  font-weight: bold;
}

.c4 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c4:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c4:focus,
.c4:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c4::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c4::-moz-placeholder {
  color: #a3a3a3;
}

.c4:-ms-input-placeholder {
  color: #a3a3a3;
}

.c4::placeholder {
  color: #a3a3a3;
}

.c4:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c4[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

<div
    class="c0"
  >
    <label
      class="c1"
      for="answer-label-ansID1"
    >
      Label
    </label>
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      <textarea
        aria-invalid="false"
        class="c4"
        data-autofocus="true"
        data-test="txt-answer-label"
        id="answer-label-ansID1"
        name="label"
        placeholder=""
      />
    </div>
  </div>,
  .c1 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c0 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c2 .modal-button-container {
  margin-top: 1em;
}

.c3 {
  font-weight: regular;
}

.c4 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c4:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c4:focus,
.c4:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c4::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c4::-moz-placeholder {
  color: #a3a3a3;
}

.c4:-ms-input-placeholder {
  color: #a3a3a3;
}

.c4::placeholder {
  color: #a3a3a3;
}

.c4:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c4[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

<div
    class="c0"
  >
    <label
      class="c1"
      for="answer-description-ansID1"
    >
      Description (optional)
    </label>
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      <textarea
        aria-invalid="false"
        class="c4"
        cols="30"
        data-test="txt-answer-description"
        id="answer-description-ansID1"
        name="description"
        rows="5"
      >
        Radio description
      </textarea>
    </div>
  </div>,
  .c2 {
  display: inline-block;
  margin-bottom: 0;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c6 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  display: inline-block;
  width: 1.1em;
  height: 1.1em;
  padding: 0;
  margin: 0 1em 0 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1em;
}

.c6:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c6:focus,
.c6:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c6::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c6::-moz-placeholder {
  color: #a3a3a3;
}

.c6:-ms-input-placeholder {
  color: #a3a3a3;
}

.c6::placeholder {
  color: #a3a3a3;
}

.c6:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c6[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c6:checked {
  background: url(SvgrURL) no-repeat center;
  background-size: 0.8em auto;
}

.c0 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c9 {
  height: 1em;
  width: 1.5em;
  top: 0.6000000000000001em;
  background: #FFFFFF;
  border-radius: 2em;
  position: absolute;
  border: 1px solid #666666;
  -webkit-transition: background 100ms ease-out,border-color 100ms ease-in;
  transition: background 100ms ease-out,border-color 100ms ease-in;
  outline: 1px solid transparent;
  cursor: pointer;
}

.c9:hover {
  border-color: #3B7A9E;
}

.c10 {
  display: inline-block;
  height: 1em;
  width: 1em;
  background: #FFFFFF;
  top: calc(42% - 1em / 2);
  left: calc(32% - 1em / 2);
  position: relative;
  will-change: transform;
  -webkit-transform: translateX( 0em );
  -ms-transform: translateX( 0em );
  transform: translateX( 0em );
  border-radius: 50%;
  -webkit-transition: -webkit-transform 100ms ease-in-out;
  -webkit-transition: transform 100ms ease-in-out;
  transition: transform 100ms ease-in-out;
  border: inherit;
}

.c7 {
  opacity: 0;
  position: relative;
  height: 100%;
  width: 100%;
  margin: 0;
  cursor: pointer;
}

.c7:focus + .c8 {
  box-shadow: 0 0 0 2px #FDBD56;
}

.c7:hover + .c8 {
  border-color: #3B7A9E;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.2em;
  width: 2em;
  position: relative;
}

.c4 {
  padding: 0 1em;
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #222222;
  font-weight: 600;
}

.c4:first-of-type {
  padding-right: 0.5em;
}

.c4:last-of-type {
  padding-left: 0.5em;
}

.c11 {
  padding: 0 1em;
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #999999;
  font-weight: 600;
}

.c11:first-of-type {
  padding-right: 0.5em;
}

.c11:last-of-type {
  padding-left: 0.5em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin-right: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="c0 c1"
  >
    <label
      class="c2 c3"
      for="ansID1"
    >
      Answer required
    </label>
    <div
      checked=""
      class="c4"
    >
      Off
    </div>
    <div
      aria-checked="false"
      class="c5"
      data-test="ansID1"
      role="switch"
    >
      <input
        aria-checked="false"
        aria-label="Answer required"
        class="c6 c7"
        data-test="ansID1-input"
        id="ansID1"
        name="ansID1"
        role="checkbox"
        type="checkbox"
      />
      <div
        class="c8 c9"
        role="presentation"
      >
        <div
          class="c10"
        />
      </div>
    </div>
    <div
      class="c11"
    >
      On
    </div>
  </div>,
  .c0 {
  margin: 0;
}

.c1 {
  margin: 0;
}

.c2 {
  vertical-align: middle;
  text-align: left;
  margin: 0;
  padding: 0.25em 0 0.5em;
  font-size: inherit;
}

.c2 .c6 {
  margin-left: 1em;
}

.c4 {
  display: none;
  margin-top: -1em;
  border-left: 3px solid #d6d8da;
  padding: 1em;
}

.c4 p {
  margin-top: 0;
}

.c3 {
  border: none;
  font-size: 1em;
  font-weight: bold;
  margin: 0;
  padding: 0.25em 0.25em 0.25em 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background: transparent;
  cursor: pointer;
  color: #3B7A9E;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 0;
}

.c3:focus {
  outline: 2px solid #FDBD56;
}

.c3::before {
  content: "";
  background-color: #3B7A9E;
  -webkit-mask: url(SvgrURL);
  mask: url(SvgrURL);
  width: 1.5em;
  height: 1.5em;
  margin-top: 0.2em;
  margin-left: -0.5em;
}

.c3:hover {
  color: #003c57;
}

.c3:hover::before {
  background-color: #003c57;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  position: relative;
  border: none;
  padding: 0.4em 0.8em;
  color: black;
  background-color: #d6d8da;
  font-weight: normal;
}

.c5[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c5:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c5:hover {
  --color-text: #FFFFFF;
  --color-bg: #2d5d79;
  border-color: var(--color-bg);
}

.c5:hover {
  background-color: #999999;
}

.c5:focus {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

<div
    class="c0"
    data-test="collapsible"
  >
    <div
      class="c1 collapsible-header"
      data-test="collapsible-header"
    >
      <h2
        class="c2 collapsible-title"
        data-test="collapsible-title"
      >
        <button
          aria-controls="collapsible-body"
          class="c3 collapsible-toggle-Collapsible-Button"
          data-test="collapsible-toggle-button"
        >
          Why is there a minimum requirement of 25 labels?
        </button>
      </h2>
    </div>
    <div
      aria-hidden="true"
      class="c4 collapsible-body"
      data-test="collapsible-body"
    >
      <p
        class=""
      >
        In accordance with usability considerations, the select answer type should only be used for long lists of 25 items or more.
      </p>
      <p
        class=""
      >
        For shorter lists of less than 25 items, the radio answer type should be used.
      </p>
      <button
        class="c5"
        data-test="collapsible-hide-button"
        type="button"
      >
        Hide this
      </button>
    </div>
  </div>,
  .c9 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c7 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c10 .modal-button-container {
  margin-top: 1em;
}

.c11 {
  font-weight: bold;
}

.c12 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c12:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c12:focus,
.c12:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c12::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c12::-moz-placeholder {
  color: #a3a3a3;
}

.c12:-ms-input-placeholder {
  color: #a3a3a3;
}

.c12::placeholder {
  color: #a3a3a3;
}

.c12:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c12[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c5 {
  position: absolute;
  left: 10px;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 1.5em;
}

.c8 {
  margin-bottom: 1.5em;
}

.c4 {
  border: 1px solid #d6d8da;
  padding: 1em 1em 0;
  border-radius: 4px;
  position: relative;
  margin-bottom: 1em;
}

.c3 {
  position: relative;
}

.c3.option-enter {
  opacity: 0;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  z-index: 200;
}

.c3.option-enter-active {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: opacity 200ms ease-out,-webkit-transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  -webkit-transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
}

.c3.option-exit {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c3.option-exit-active {
  opacity: 0;
  height: 0 !important;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,-webkit-transform 100ms ease-in;
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
  transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
}

.c2 {
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.c0 {
  margin: 1em 0 0;
  width: 85%;
}

.c1 {
  margin: 0 0 1em;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #3B7A9E;
  --color-bg: #FFFFFF;
  border: 1px solid var(--color-text);
  width: 100%;
  margin-top: 1em;
  margin-bottom: 1em;
}

.c13[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c13:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c13:hover {
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  border-color: var(--color-bg);
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-test="multiple-choice-options"
    >
      <div>
        <div
          class="c2 c3"
        >
          <div
            class="c4"
          >
            <div>
              <div
                class="c5"
              />
              <div
                class="c6"
              >
                <div
                  class="c7 c8"
                >
                  <label
                    class="c9"
                    for="option-label-1"
                  >
                    Label 1
                  </label>
                  <div
                    class="c10"
                  />
                  <div
                    class="c11"
                  >
                    <textarea
                      aria-invalid="false"
                      class="c12"
                      data-autofocus="true"
                      data-test="option-label"
                      id="option-label-1"
                      invalid=""
                      name="label"
                      placeholder=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="c13"
        type="button"
      >
        Add another option
      </button>
    </div>
  </div>,
]
`;
